syntax = "proto3";
package models;

option go_package = "protocols/orders";

// Shop is
message Order {
    string          name        = 1;
    string          mealType = 2;
    float           price       = 3;
    int32 quantity =4;
    string day = 5;
}

message Orders{
    repeated Order Orders = 1;
    bytes           order_uuid        = 2;
    bytes           user_uuid        = 3;
}

message DummyOrder{
    bytes           order_uuid        = 1;
    bytes           user_uuid        = 2;
}